# local-repo-scanner

./: .gitignore  README.md  config.json  pyproject.toml  scan.py
