[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-repo-scanner"
version = "0.1.0"
authors = [
  { name="09ball" },
]
description = "Scans directories for git repositories with uncommitted changes or stashes."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
scan = "scan:main"